--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,14 @@
 @import "config/colors";
 @import "modules/common";
 @import "modules/users";
+
+
+// トップ----------------------
+@import "modules/top__header";
+@import "modules/top__visual";
+@import "modules/top__introduction";
+@import "modules/top__middle";
+@import "modules/top__main";
+@import "modules/top__banner";
+@import "modules/top__footer";
+// ---------------------------
