--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,9 +6,7 @@
 
 // トップ----------------------
 @import "modules/top__header";
-@import "modules/top__visual";
-@import "modules/top__introduction";
-@import "modules/top__middle";
+@import "modules/top__contents";
 @import "modules/top__main";
 @import "modules/top__banner";
 @import "modules/top__footer";
