--- a/app/assets/stylesheets/modules/_top__contents.scss
+++ b/app/assets/stylesheets/modules/_top__contents.scss
@@ -1,3 +1,46 @@
+// ビジュアル---------------------------------------
+.top__main__visual{
+  background-image: url(/assets/bg-mainVisual-pict_pc.jpg);
+  width: 100%;
+  height: 560px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  position: relative;
+  padding: 0 60px;
+  display: flex;
+  align-items: center;
+  &__content{
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 35px 0 0 0;
+    &__subtitle{
+      text-shadow: 0 0 5px rgba(0,0,0,0.4);
+      font-size: 60px;
+      line-height: 1.2;
+      color: #fff;
+    }
+    &__text{
+      text-shadow: 0 0 5px rgba(0,0,0,0.4);
+      font-size: 18px;
+      color: #fff;
+      line-height: 1.77778;
+      margin: 16px 0 0 0;
+    }
+    &__btn{
+      display: flex;
+      margin: 24px 0 0 0;
+      &__abtn{
+        margin-right: 10px;
+        padding-top: 10px;
+      }
+    }
+  }
+}
+// -----------------------------------------------------
+
+// イントロダクション---------------------------------------
 .top__main__introduction{
   padding: 60px 20px;
   &__subtitle{
@@ -131,3 +174,39 @@
     }
   }
 }
+// ------------------------------------------------
+
+// ミドル-------------------------------------------
+.top__main__middle{
+  background-image: url(/assets/bg-topMiddleDl-pict.jpg);
+  background-position: bottom right;
+  height: 400px;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  &__inner{
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0,0,0,0.4);
+    text-align: left;
+    max-width: 1040px;
+    width: 100%;
+    margin: 0 auto;
+    &__subtitle{
+      font-size: 27px;
+      font-weight: bold;
+      line-height: 1.4;
+    }
+    &__text{
+      font-size: 18px;
+      margin: 20px 0 30px;
+      line-height: 1.5;
+    }
+    &__btn{
+      display: flex;
+      &__abtn{
+        padding-top: 10px;
+      }
+    }
+  }
+}
+// ------------------------------------------------------
