--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,8 +1,5 @@
 = render 'top__header'
-= render 'top__visual'
-= render 'top__introduction'
-= render 'top__middle'
-
+= render 'top__contents'
 = render 'top__main'
 = render 'top__banner'
 = render 'top__footer'
