--- a/app/views/posts/_top__header.html.haml
+++ b/app/views/posts/_top__header.html.haml
@@ -8,7 +8,7 @@
         %input{type: "text", class: "top__header__inner__main__search__box__text", placeholder: "キーワードから探す"}
         .top__header__inner__main__search__box__submit
           =link_to "#" do
-            =image_tag asset_path('icon-search 1'), height: '20', width: '20', class: 'top__header__inner__main__search__box__submit__btn'
+            =image_tag asset_path('icon-search 1.png'), height: '20', width: '20', class: 'top__header__inner__main__search__box__submit__btn'
     .top__header__inner__nav
       %ul.top__header__inner__nav__left
         %li.top__header__inner__nav__left__category
