--- a/app/assets/stylesheets/modules/_top__banner.scss
+++ b/app/assets/stylesheets/modules/_top__banner.scss
@@ -1,5 +1,5 @@
 .top__banner {
-  background-image: url("/assets/bg-appBanner-pict.jpg");
+  background-image: image-url("bg-appBanner-pict.jpg");
   padding: 170px;
   background-size: cover;
   background-position: center;
