--- a/app/views/posts/_top__contents.html.haml
+++ b/app/views/posts/_top__contents.html.haml
@@ -10,10 +10,10 @@
     .top__main__visual__content__btn
       .top__main__visual__content__btn__abtn
         =link_to "#" do
-          =image_tag '/assets/Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg', height: '60', width: '155', class: 'top__main__visual__content__abtn__logo'
+          =image_tag asset_path('Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg'), height: '60', width: '155', class: 'top__main__visual__content__abtn__logo'
       .top__main__visual__content__btn__gbtn
         =link_to "#" do
-          =image_tag '/assets/google-play-badge.png', height: '80', width: '175',class: 'top__main__visual__content__gbtn-logo'
+          =image_tag asset_path('google-play-badge.png'), height: '80', width: '175',class: 'top__main__visual__content__gbtn-logo'
 -# -------------------------------------------------------
 
 -# イントロダクション-----------------------------------------------
@@ -23,7 +23,7 @@
   %ul.top__main__introduction__lists
     %li.top__main__introduction__lists__list1
       .top__main__introduction__lists__list1__picture
-        = image_tag "pict-reason-01.jpg", height: "223",width: "223", alt: "顔写真"
+        = image_tag asset_path("pict-reason-01.jpg"), height: "223",width: "223", alt: "顔写真"
         .top__main__introduction__lists__list1__picture__number
           1
       %h3.top__main__introduction__lists__list1__text
@@ -33,7 +33,7 @@
         スマホで入力するだけで簡単に出品できる！
     %li.top__main__introduction__lists__list2
       .top__main__introduction__lists__list2__picture
-        = image_tag "pict-reason-02.jpg", height: "223",width: "223", alt: "顔写真"
+        = image_tag asset_path("pict-reason-02.jpg"), height: "223",width: "223", alt: "顔写真"
         .top__main__introduction__lists__list2__picture__number
           2
       %h3.top__main__introduction__lists__list2__text
@@ -43,7 +43,7 @@
         めんどくさい入力は必要なく、検索も購入もスムーズ！
     %li.top__main__introduction__lists__list3
       .top__main__introduction__lists__list3__picture
-        = image_tag "pict-reason-03.jpg", height: "223",width: "223", alt: "顔写真"
+        = image_tag asset_path("pict-reason-03.jpg"), height: "223",width: "223", alt: "顔写真"
         .top__main__introduction__lists__list3__picture__number
           3
       %h3.top__main__introduction__lists__list3__text
@@ -67,8 +67,8 @@
     .top__main__middle__inner__btn
       .top__main__middle__inner__btn__abtn
         =link_to "#" do
-          =image_tag '/assets/Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg', height: '60', width: '155', class: 'top__main__middle__inner__btn__abtn__logo'
+          =image_tag asset_path('Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg'), height: '60', width: '155', class: 'top__main__middle__inner__btn__abtn__logo'
       .top__main__middle__inner__btn__gbtn
         =link_to "#" do
-          =image_tag '/assets/google-play-badge.png', height: '80', width: '175',class: 'top__main__middle__inner__btn__gbtn__logo'
+          =image_tag asset_path('google-play-badge.png'), height: '80', width: '175',class: 'top__main__middle__inner__btn__gbtn__logo'
 -# ------------------------------------------------------------
