--- a/app/views/posts/_top__main.html.haml
+++ b/app/views/posts/_top__main.html.haml
@@ -9,7 +9,7 @@
 
       .top__main__keyfeatures--main--list
         .top__main__keyfeatures--main--list--image
-          = image_tag '/assets/icon-01.png', class: 'top__main__keyfeatures--main--list--image--icon'
+          = image_tag asset_path('icon-01.png'), class: 'top__main__keyfeatures--main--list--image--icon'
         .top__main__keyfeatures--main--list--title
           簡単に売り買いできる
         .top__main__keyfeatures--main--list--text
@@ -17,7 +17,7 @@
 
       .top__main__keyfeatures--main--list
         .top__main__keyfeatures--main--list--image
-          = image_tag '/assets/icon-03.png', class: 'top__main__keyfeatures--main--list--image--icon'
+          = image_tag asset_path('icon-03.png'), class: 'top__main__keyfeatures--main--list--image--icon'
         .top__main__keyfeatures--main--list--title
           売上金は即日振込みに対応
         .top__main__keyfeatures--main--list--text
@@ -25,7 +25,7 @@
 
       .top__main__keyfeatures--main--list
         .top__main__keyfeatures--main--list--image
-          = image_tag '/assets/icon-04.png', class: 'top__main__keyfeatures--main--list--image--icon'
+          = image_tag asset_path('icon-04.png'), class: 'top__main__keyfeatures--main--list--image--icon'
         .top__main__keyfeatures--main--list--title
           様々な支払いに対応
         .top__main__keyfeatures--main--list--text
@@ -42,7 +42,7 @@
     .top__main__pickupcategory--main
 
       .top__main__pickupcategory--main--list
-        = image_tag '/assets/IMG_9064.JPG', class: 'top__main__pickupcategory--main--list--image'
+        = image_tag asset_path('IMG_9064.JPG'), class: 'top__main__pickupcategory--main--list--image'
         .top__main__pickupcategory--main--list--text
           .top__main__pickupcategory--main--list--text--left
             %p product3
@@ -53,7 +53,7 @@
             0
 
       .top__main__pickupcategory--main--list
-        = image_tag '/assets/IMG_9068.JPG', class: 'top__main__pickupcategory--main--list--image'
+        = image_tag asset_path('IMG_9068.JPG'), class: 'top__main__pickupcategory--main--list--image'
         .top__main__pickupcategory--main--list--text
           .top__main__pickupcategory--main--list--text--left
             %p product2
@@ -64,7 +64,7 @@
             0
 
       .top__main__pickupcategory--main--list
-        = image_tag '/assets/IMG_9074.JPG', class: 'top__main__pickupcategory--main--list--image'
+        = image_tag asset_path('IMG_9074.JPG'), class: 'top__main__pickupcategory--main--list--image'
         .top__main__pickupcategory--main--list--text
           .top__main__pickupcategory--main--list--text--left
             %p product1
@@ -85,7 +85,7 @@
     .top__main__pickupbrand--main
 
       .top__main__pickupbrand--main--list
-        = image_tag '/assets/IMG_9064.JPG', class: 'top__main__pickupbrand--main--list--image'
+        = image_tag asset_path('IMG_9064.JPG'), class: 'top__main__pickupbrand--main--list--image'
         .top__main__pickupbrand--main--list--text
           .top__main__pickupbrand--main--list--text--left
             %p product3
@@ -96,7 +96,7 @@
             0
 
       .top__main__pickupbrand--main--list
-        = image_tag '/assets/IMG_9068.JPG', class: 'top__main__pickupbrand--main--list--image'
+        = image_tag asset_path('IMG_9068.JPG'), class: 'top__main__pickupbrand--main--list--image'
         .top__main__pickupbrand--main--list--text
           .top__main__pickupbrand--main--list--text--left
             %p product2
@@ -107,7 +107,7 @@
             0
 
       .top__main__pickupbrand--main--list
-        = image_tag '/assets/IMG_9074.JPG', class: 'top__main__pickupbrand--main--list--image'
+        = image_tag asset_path('IMG_9074.JPG'), class: 'top__main__pickupbrand--main--list--image'
         .top__main__pickupbrand--main--list--text
           .top__main__pickupbrand--main--list--text--left
             %p product1
