--- a/app/views/posts/_top__banner.html.haml
+++ b/app/views/posts/_top__banner.html.haml
@@ -5,6 +5,6 @@
       %p.top__banner__inner--text--bottom 今すぐ無料ダウンロード！
       %ul.top__banner__inner--badge
         %li
-          = image_tag "/assets/Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg", class: "top__banner__inner--badge--apple"
+          = image_tag asset_path("Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg"), class: "top__banner__inner--badge--apple"
         %li 
-          = image_tag "/assets/google-play-badge.png", class: "top__banner__inner--badge--google"
+          = image_tag asset_path("google-play-badge.png"), class: "top__banner__inner--badge--google"
