--- a/app/assets/stylesheets/modules/_top__contents.scss
+++ b/app/assets/stylesheets/modules/_top__contents.scss
@@ -1,6 +1,6 @@
 // ビジュアル---------------------------------------
 .top__main__visual{
-  background-image: url(/assets/bg-mainVisual-pict_pc.jpg);
+  background-image: image-url("bg-mainVisual-pict_pc.jpg");
   width: 100%;
   height: 560px;
   background-size: cover;
@@ -178,7 +178,7 @@
 
 // ミドル-------------------------------------------
 .top__main__middle{
-  background-image: url(/assets/bg-topMiddleDl-pict.jpg);
+  background-image: image-url("bg-topMiddleDl-pict.jpg");
   background-position: bottom right;
   height: 400px;
   background-size: cover;
