--- a/app/assets/stylesheets/modules/_top__contents.scss
+++ b/app/assets/stylesheets/modules/_top__contents.scss
@@ -108,7 +108,7 @@
       &__picture{
         position: relative;
         margin-bottom: 20px;
-        background-image: url(/assets/pict-reason-02.jpg);
+        // background-image: url(/assets/pict-reason-02.jpg);
         &__number{
           display: inline-block;
           position: absolute;
@@ -145,7 +145,7 @@
       &__picture{
         position: relative;
         margin-bottom: 20px;
-        background-image: url(/assets/pict-reason-03.jpg);
+        // background-image: url(/assets/pict-reason-03.jpg);
         &__number{
           display: inline-block;
           position: absolute;
