--- a/app/views/devise/shared/_footer.html.haml
+++ b/app/views/devise/shared/_footer.html.haml
@@ -4,6 +4,6 @@
     %li フリマ利用規約
     %li 特定商取引に関する表記
   = link_to root_path do
-    %image.icon{src: "/assets/logo.png", class: "user-new--logo"}
+    = image_tag asset_path('logo.png'), class: "user-new--logo"
   .text-center.user-new__footer--text
     © Furima, Inc.
