--- a/app/views/devise/shared/_header.html.haml
+++ b/app/views/devise/shared/_header.html.haml
@@ -1,4 +1,4 @@
 .user-new__header
   .user-new__header__top
     = link_to root_path do
-      %image.icon{src: "/assets/logo.png", class: "user-new--logo"}
+      = image_tag asset_path('logo.png'), class: "user-new--logo"
