--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -1,20 +1,18 @@
 .user-new{
-  height: 100vh;
-  width: 100vw;
   background-color: $user-new-bgc;
   &__header{
     height: 128px;
     width: 100%;
     text-align: center;
-    &__logo{
-      margin-top: 40px;
-      height: 49px;
-      width: 185px;
-    }
+  }
+  &--logo{
+    margin-top: 40px;
+    height: 49px;
+    width: 185px;
   }
   &__main{
     width: 700px;
-    min-height: 1000px;
+    padding-bottom: 64px;
     margin: 0 auto;
     background-color: white;
   }
@@ -38,12 +36,15 @@
       font-size: 14px;
     }
     &--require{
-      background: #ea352d;
+      background-color: #ea352d;
       margin-left: 8px;
       padding: 4px;
       border-radius: 2px;
       color: white;
       font-size: 12px;
+      &--any{
+        background-color: $light_gray;
+      }
     }
     &--input{
       width: 309px;
@@ -52,10 +53,140 @@
       border-radius: 4px;
       border: 1px solid #ccc;
       font-size: 16px;
-      // &:active{
-      //   border-color: black;
-      //   color: blue;
-      // }
     }
+    &--checkBox{
+      padding: 10px 0;
+      color: $light_dark;
+      font-size: 14px;
+    }
+    &--check{
+      width: 20px;
+      height: 20px;
+      border-radius: 2px;
+      border: 1px solid #ccc;
+      vertical-align: top;
+      transition: all ease-out .3s;
+    }
+    &__identification{
+      margin-top: 8px;
+      font-size: 14px;
+      color: $light_dark;
+    }
+    &--half{
+      width: calc(50% - 6px);
+      &:first-of-type {
+        margin-right: 8px;
+      }
+    }
+    &--birthday{
+      line-height: 48px;
+      padding-top: 8px;
+      color: $light_dark;
+      &--text{
+        padding-top: 8px;
+        font-size: 14px;
+        color: $light_gray;
+      }
+    
+      & select{
+        height: 48px;
+        width: 76px;
+        padding: 0 16px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+        cursor: pointer;
+        &:not(:first-of-type){
+          margin-left: 8px;
+        }
+      } 
+  }
+    &--anounce{
+      font-size: 14px;
+      text-align: center;
+    }
+    &--submit{
+      display: block;
+      width: 100%;
+      line-height: 48px;
+      font-size: 14px;
+      border: none;
+      transition: all ease-out .3s;
+      cursor: pointer;
+      text-align: center;
+      background-color: #ea352d;
+      color: white;
+      outline: none;
+      &:focus {
+        outline:0;
+      }
+    }
+    &--confirmation{
+      font-size: 14px;
+      text-align: right;
+    }
+    &--english{
+      background-color: $user-new-bgc;
+      padding: 8px 16px;
+      font-size: 10px;
+      color: $light_gray;
+    }
+  }
+  &-link a{
+    text-decoration: none;
+    color: #0099e8;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+  &__footer{
+    width: 456px;
+    height: 140px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 40px 0;
+    & ul{
+      width: 100%;
+    }
+    & li{
+      display: block;
+      color: $light_dark;
+      font-size: 12px;
+      padding-right: 10px;
+      display: inline-block;
+    }
+    &--text{
+      font-size: 13px;
+      color: $light_dark;
+    }
+  }
+}
+
+.user-login{
+  width: 456px;
+  margin: 0 auto;
+  background-color: white;
+  &__no-account{
+    text-align: center;
+    padding: 40px 64px;
+    border-bottom: 1px solid $user-new-bgc;
+  }
+  &--btn a{
+    display: block;
+    width: 100%;
+    margin-top: 25px;
+    border: 1px solid #0099e8;
+    background: #0099e8;
+    color: white;
+    line-height: 40px;
+    cursor: pointer;
+    text-decoration: none;
+    &:focus {
+      outline:0;
+    }
+  }
+
+  &__main{
+    padding: 0 57px 40px;
   }
 }
