--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -12,7 +12,7 @@
   = form.text_field :delivery_fee
   = form.submit "投稿する"
 
-  = form.fields_for :post_images
+  = form.fields_for :post_images do |i|
 
 
   -# = f.file_field :image
