add_view_posts_new2
出品ページのマークアップ
ログインと新規登録ページのリファリクタリング
JSが起動しないため、turbolinksを削除

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,19 @@
 @import "reset";
 @import "config/colors";
-@import "modules/common";
-@import "modules/users";
 
+// @mixin---------------------
+@import "mixin/form-require";
+@import "mixin/submit-btn";
+@import "mixin/form-input";
+// ---------------------------
+
+// 共通のcss---------------------
+@import "modules/common";
+// ---------------------------
+
+// ログイン画面と新規登録---------------
+@import "modules/users";
+// ---------------------------
 
 // トップ----------------------
 @import "modules/top__header";
@@ -10,4 +21,8 @@
 @import "modules/top__main";
 @import "modules/top__banner";
 @import "modules/top__footer";
+// ---------------------------
+
+// ポスト----------------------
+@import "modules/post-new";
 // ---------------------------
