--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-.user-new
+.bgc-gray
   = render 'devise/shared/header'
   .user-new__main
     = form_for(@user, url: user_registration_path) do |f|
@@ -9,25 +9,25 @@
         .user-new__field
           %label.user-new__field--text
             ニックネーム
-          %span.user-new__field--require
+          %span.form-require
             必須
           = f.text_field :nickname, class: "user-new__field--input", placeholder: "例）フリマ太郎"
         .user-new__field
           %label.user-new__field--text
             メールアドレス
-          %span.user-new__field--require
+          %span.form-require
             必須
           = f.email_field :email, class: "user-new__field--input", placeholder: "PC・携帯どちらでも可"
         .user-new__field
           %label.user-new__field--text
             パスワード
-          %span.user-new__field--require
+          %span.form-require
             必須
           = f.password_field :password, class: "user-new__field--input user-pass", placeholder: "7文字以上で入力してください"
         .user-new__field
           %label.user-new__field--text
             パスワード（確認）
-          %span.user-new__field--require
+          %span.form-require
             必須
           = f.password_field :password_confirmation, class: "user-new__field--input user-pass", placeholder: "1度入力してください"
           .user-new__field--checkBox
@@ -41,7 +41,7 @@
         .user-new__field
           %label.user-new__field--text
             お名前(全角) 
-          %span.user-new__field--require
+          %span.form-require
             必須
           .display-flex
             = f.text_field :family_name, class: "user-new__field--input user-new__field--half", placeholder: "例）大石"
@@ -49,7 +49,7 @@
         .user-new__field
           %label.user-new__field--text
             お名前カナ(全角) 
-          %span.user-new__field--require
+          %span.form-require
             必須
           .display-flex
             = f.text_field :family_name_kana, class: "user-new__field--input user-new__field--half", placeholder: "例）オオイシ"
@@ -57,7 +57,7 @@
         .user-new__field
           %label.user-new__field--text
             生年月日
-          %span.user-new__field--require
+          %span.form-require
             必須
           .user-new__field--birthday
             != sprintf(f.date_select(:birthday, prefix:'birthday', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日'
