--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -1,5 +1,4 @@
 .user-new{
-  background-color: $user-new-bgc;
   &__header{
     height: 128px;
     width: 100%;
@@ -25,7 +24,7 @@
     padding: 32px;
     font-size: 22px;
     font-weight: bold;
-    border-bottom: 1px solid $user-new-bgc;
+    border-bottom: 1px solid $bgc-gray;
   }
   &__field{
     margin-top: 32px;
@@ -35,24 +34,8 @@
       color: #333;
       font-size: 14px;
     }
-    &--require{
-      background-color: $light_blue;
-      margin-left: 8px;
-      padding: 4px;
-      border-radius: 2px;
-      color: white;
-      font-size: 12px;
-      &--any{
-        background-color: $light_gray;
-      }
-    }
     &--input{
-      width: 309px;
-      margin-top: 8px;
-      padding: 12px 16px 10px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      font-size: 16px;
+      @include form-input(309px);
     }
     &--checkBox{
       padding: 10px 0;
@@ -105,27 +88,14 @@
       text-align: center;
     }
     &--submit{
-      display: block;
-      width: 100%;
-      line-height: 48px;
-      font-size: 14px;
-      border: none;
-      transition: all ease-out .3s;
-      cursor: pointer;
-      text-align: center;
-      background-color: $light_blue;
-      color: white;
-      outline: none;
-      &:focus {
-        outline:0;
-      }
+      @include submit-btn($light_blue);
     }
     &--confirmation{
       font-size: 14px;
       text-align: right;
     }
     &--english{
-      background-color: $user-new-bgc;
+      background-color: $bgc-gray;
       padding: 8px 16px;
       font-size: 10px;
       color: $light_gray;
@@ -167,22 +137,15 @@
   background-color: white;
   &__no-account{
     text-align: center;
-    padding: 40px 64px;
-    border-bottom: 1px solid $user-new-bgc;
+    padding: 40px 57px;
+    border-bottom: 1px solid $bgc-gray;
+    & p{
+      margin-bottom: 25px;
+    }
   }
   &--btn a{
-    display: block;
-    width: 100%;
-    margin-top: 25px;
-    border: 1px solid #F5B759;
-    background: #F5B759;
-    color: white;
-    line-height: 40px;
-    cursor: pointer;
     text-decoration: none;
-    &:focus {
-      outline:0;
-    }
+    @include submit-btn(#F5B759);
   }
 
   &__main{
