--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,3 +3,10 @@
 = render 'top__main'
 = render 'top__banner'
 = render 'top__footer'
+
+-# - @posts.each do |post|
+-#     = image_tag "#{post.post_images[0].image}"
+- @posts.each do |post|
+  = post.name  
+  = link_to '編集', edit_post_path(post)
+  = link_to '削除', post_path(post), method: :delete
