--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,7 +6,7 @@
 
 -# - @posts.each do |post|
 -#     = image_tag "#{post.post_images[0].image}"
-- @posts.each do |post|
-  = post.name  
-  = link_to '編集', edit_post_path(post)
-  = link_to '削除', post_path(post), method: :delete
+-# - @posts.each do |post|
+-#   = post.name  
+-#   = link_to '編集', edit_post_path(post)
+-#   = link_to '削除', post_path(post), method: :delete
