--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -11,6 +11,7 @@
 
 - @posts.each do |post|
   = post.name
+  = image_tag "#{post.post_images[0].image}"
   = link_to '詳細', post_path(post)
   = link_to '編集', edit_post_path(post)
   = link_to '削除', post_path(post), method: :delete
