--- a/app/views/posts/_top__main.html.haml
+++ b/app/views/posts/_top__main.html.haml
@@ -40,81 +40,17 @@
       .top__main__pickupcategory--top--title ピックアップカテゴリー
       = link_to "新規投稿商品", "#", class: "top__main__pickupcategory--top--archiver" 
     .top__main__pickupcategory--main
-
-      .top__main__pickupcategory--main--list
-        = image_tag asset_path('IMG_9064.JPG'), class: 'top__main__pickupcategory--main--list--image'
-        .top__main__pickupcategory--main--list--text
-          .top__main__pickupcategory--main--list--text--left
-            %p product3
-            %p 30000円
-            %p.top__main__pickupcategory--main--list--text--left--item （税込）
-          .top__main__pickupcategory--main--list--text--right
-            %i.fas.fa-star
-            0
-
-      .top__main__pickupcategory--main--list
-        = image_tag asset_path('IMG_9068.JPG'), class: 'top__main__pickupcategory--main--list--image'
-        .top__main__pickupcategory--main--list--text
-          .top__main__pickupcategory--main--list--text--left
-            %p product2
-            %p 20000円
-            %p.top__main__pickupcategory--main--list--text--left--item （税込）
-          .top__main__pickupcategory--main--list--text--right
-            %i.fas.fa-star
-            0
-
-      .top__main__pickupcategory--main--list
-        = image_tag asset_path('IMG_9074.JPG'), class: 'top__main__pickupcategory--main--list--image'
-        .top__main__pickupcategory--main--list--text
-          .top__main__pickupcategory--main--list--text--left
-            %p product1
-            %p 10000円
-            %p.top__main__pickupcategory--main--list--text--left--item （税込）
-          .top__main__pickupcategory--main--list--text--right
-            %i.fas.fa-star
-            0
+      .top__main__pickupcategory--main
+        = render @posts
   -# ----------------------------------------------------------------
 
 
   -# ブランド--------------------------------------------------------
-
+  
   .top__main__pickupbrand
     .top__main__pickupbrand--top
       .top__main__pickupbrand--top--title ピックアップブランド
       = link_to "アーカイバ", "#", class: "top__main__pickupbrand--top--archiver"
     .top__main__pickupbrand--main
-
-      .top__main__pickupbrand--main--list
-        = image_tag asset_path('IMG_9064.JPG'), class: 'top__main__pickupbrand--main--list--image'
-        .top__main__pickupbrand--main--list--text
-          .top__main__pickupbrand--main--list--text--left
-            %p product3
-            %p 30000円
-            %p.top__main__pickupbrand--main--list--text--left--item （税込）
-          .top__main__pickupbrand--main--list--text--right
-            %i.fas.fa-star
-            0
-
-      .top__main__pickupbrand--main--list
-        = image_tag asset_path('IMG_9068.JPG'), class: 'top__main__pickupbrand--main--list--image'
-        .top__main__pickupbrand--main--list--text
-          .top__main__pickupbrand--main--list--text--left
-            %p product2
-            %p 20000円
-            %p.top__main__pickupbrand--main--list--text--left--item （税込）
-          .top__main__pickupbrand--main--list--text--right
-            %i.fas.fa-star
-            0
-
-      .top__main__pickupbrand--main--list
-        = image_tag asset_path('IMG_9074.JPG'), class: 'top__main__pickupbrand--main--list--image'
-        .top__main__pickupbrand--main--list--text
-          .top__main__pickupbrand--main--list--text--left
-            %p product1
-            %p 10000円
-            %p.top__main__pickupbrand--main--list--text--left--item （税込）
-          .top__main__pickupbrand--main--list--text--right
-            %i.fas.fa-star
-            0
-
+      =render @posts
   -# -----------------------------------------------------------------
