--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@
 @import "modules/top__banner";
 @import "modules/top__footer";
 // ---------------------------
+
+// マイページ-------------------
+@import "modules/show";
+@import "modules/destroy";
+// -----------------------------
