--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -1,3 +1,60 @@
+@mixin tabses() {
+  margin-top: 50px;
+  background-color: white;
+  width: 100%;
+  margin: 0 auto;
+}
+@mixin tab_items() {
+  width: calc(100%/2);
+  height: 72px;
+  background-color: #cccccc;
+  line-height: 72px;
+  font-size: 16px;
+  text-align: center;
+  color: #565656;
+  display: block;
+  float: left;
+  text-align: center;
+  font-weight: bold;
+  transition: all 0.2s ease;
+}
+@mixin des() {
+  box-sizing: border-box;
+  padding: 160px 0 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: rgb(174, 174, 174);
+}
+@mixin lists() {
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  padding: 16px;
+  font-size: 14px;
+  color: #333;
+}
+@mixin as() {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+}
+@mixin is() {
+  position: absolute;
+  top: 10%;
+  left: 240px;
+}
+@mixin change() {
+  background-color: white;
+  border-top: 2px solid #5ab4bd;
+  box-sizing: border-box;
+}
+@mixin contents() {
+  box-sizing: border-box;
+  display: none;
+  clear: both;
+  align-content: space-between;
+}
 .show-header{
   padding: 0 60px;
   position: relative;
@@ -26,7 +83,7 @@
       &__top{
         height: 200px;
         width: 700px;
-        background-image: image-url(seen.jpg);
+        background-image: image-url("seen.jpg");
         &__contents{
           height: 160px;
           width: 660px;
@@ -36,7 +93,7 @@
           height: 60px;
           width: 60px;
           border-radius: 50%;
-          background-image: image-url(human.jpg);
+          background-image: image-url("human.jpg");
           background-position: 60% 40%;
           margin: 0 auto;
         }
@@ -59,24 +116,10 @@
           }
       }
       .tab {
-        margin-top: 50px;
-        background-color: white;
-        width: 100%;
-        margin: 0 auto;
+        @include tabses();
       }
       .tab_item {
-        width: calc(100%/2);
-        height: 72px;
-        background-color: #cccccc;
-        line-height: 72px;
-        font-size: 16px;
-        text-align: center;
-        color: #565656;
-        display: block;
-        float: left;
-        text-align: center;
-        font-weight: bold;
-        transition: all 0.2s ease;
+        @include tab_items();
         &:hover{
           opacity: 0.75;
         }
@@ -85,27 +128,16 @@
         display: none;
       }
       .tab_content {
-        box-sizing: border-box;
-        display: none;
-        clear: both;
-        align-content: space-between;
+        @include contents();
         .tab_content_description{
-          box-sizing: border-box;
-          padding: 160px 0 60px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          color: rgb(174, 174, 174);
+          @include des();
         }
       }
       #notice:checked ~ #notice_content,#task:checked  ~ #task_content{
         display: block;
       }
       .tab input:checked + .tab_item {
-        background-color: white;
-        border-top: 2px solid #5ab4bd;
-        box-sizing: border-box;
+        @include change();
       }
       &__container{
         margin-top: 40px;
@@ -121,24 +153,10 @@
           }
         }
         .tabs2 {
-          margin-top: 50px;
-          background-color: white;
-          width: 100%;
-          margin: 0 auto;
+          @include tabses();
         }
         .tab_item2 {
-          width: calc(100%/2);
-          height: 72px;
-          background-color: #cccccc;
-          line-height: 72px;
-          font-size: 16px;
-          text-align: center;
-          color: #565656;
-          display: block;
-          float: left;
-          text-align: center;
-          font-weight: bold;
-          transition: all 0.2s ease;
+          @include tab_items();
           &:hover{
             opacity: 0.75;
           }
@@ -147,27 +165,16 @@
           display: none;
         }
         .tab_content {
-          box-sizing: border-box;
-          display: none;
-          clear: both;
-          align-content: space-between;
+          @include contents();
           .tab_content_description{
-            box-sizing: border-box;
-            padding: 160px 0 60px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            color: rgb(174, 174, 174);
+            @include des();
           }
         }
         #trading:checked ~ #trading_content,#traded:checked  ~ #traded_content{
           display: block;
         }
         .tabs2 input:checked + .tab_item2 {
-          background-color: white;
-          border-top: 2px solid #5ab4bd;
-          box-sizing: border-box;
+          @include change();
         }
       }
     }
@@ -178,18 +185,11 @@
       float: left;
       &--list__top{
           li{
-            background-color: #fff;
-            border-top: 1px solid #eee;
-            padding: 16px;
-            font-size: 14px;
+            @include lists();
             a{
-              color: #333;
-              text-decoration: none;
-              position: relative;
+              @include as();
               i{
-                position: absolute;
-                top: 10%;
-                left: 240px;
+                @include is();
               }
             }                   
           }
@@ -205,20 +205,12 @@
       &--list__bottom{
         width: 280px;
         li{
-          background-color: #fff;
-          border-top: 1px solid #eee;
-          padding: 16px;
-          font-size: 14px;
-          color: #333;
+          @include lists();
           a{
-            color: #333;
-            text-decoration: none;
-            position: relative;
+            @include as();
           }
           i{
-            position: absolute;
-            top: 10%;
-            left: 240px;
+            @include is();
           }
         }
         li:hover{
@@ -228,19 +220,12 @@
       &--list__footer{
         height: 48px;
         li{
-          background-color: #fff;
-          border-top: 1px solid #eee;
-          padding: 16px;
-          font-size: 14px;
+          @include lists();
           a{
-            color: #333;
-            text-decoration: none;
-            position: relative;
+            @include as();
           }
           i{
-            position: absolute;
-            top: 10%;
-            left: 240px;
+            @include is();
           }
         }
         li:hover{
