--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -16,33 +16,34 @@
           .show-main__contents__right__top__goods
             出品数 0
       .show-main__contents__right__mypage-tabs
-        .tab
-          %input#notice{:checked => "checked", :name => "tab_item", :type => "radio"}/
-          %label.tab_item{:for => "notice"} お知らせ
-          %input#task{:name => "tab_item", :type => "radio"}/
-          %label.tab_item{:for => "task"} やることリスト
-          #notice_content.tab_content
-            .tab_content_description.nothing_image
+        .tab-first
+          %input#notice{:checked => "checked", :name => "tab-first_item", :type => "radio"}/
+          %label.tab-first_item{:for => "notice"} お知らせ
+          %input#task{:name => "tab-first_item", :type => "radio"}/
+          %label.tab-first_item{:for => "task"} やることリスト
+          #notice_content.tab_content_top
+            .tab_content_description
               %p 現在、お知らせはありません。
-          #task_content.tab_content
-            .tab_content_description.nothing_image
+          #task_content.tab_content_top
+            .tab_content_description
               %p 現在、やることリストはありません。
       .show-main__contents__right__container
         .show-main__contents__right__container__title
           %h2 購入した商品
-        .tabs2
-          %input#trading{checked: "checked", name: "tab_item2", type: "radio"}/
-          %label.tab_item2{for: "trading"} 取引中
-          %input#traded{name: "tab_item2", type: "radio"}/
-          %label.tab_item2{for: "traded"} 過去の取引
-          #trading_content.tab_content
-            .tab_content_description.nothing_image
+        .tab-second
+          %input#trading{checked: "checked", name: "tab-second_item", type: "radio"}/
+          %label.tab-second_item{for: "trading"} 取引中
+          %input#traded{name: "tab-second_item", type: "radio"}/
+          %label.tab-second_item{for: "traded"} 過去の取引
+          #trading_content.tab_content_top
+            .tab_content_description
               %p 現在取引している商品がありません。
-          #traded_content.tab_content
-            .tab_content_description.nothing_image
+          #traded_content.tab_content_top
+            .tab_content_description
               %p 過去に取引した商品がありません。
     = render 'show__left'    
 
   -# footer
   = render 'posts/top__banner'
   = render 'posts/top__footer'
+
